# AutoTradingKit

./: .gitignore  ATK.py  LICENSE  LICENSE.txt  README.md  atr_stoploss.py  binance-watch-ohlcv.py  config.yaml  constraints.txt  convert2cython copy.py  convert2cython.py  convert2cython_new.py  create_pyi_file.py  function_test.py  galerry.py  generate_icon.py  icon.py  indicators_test.py  install.py  mac_linux_requirements.txt  mainwindow.py  mqtt_entrade.py  note.md  nuitka-crash-report.xml  pl_calculator.py  promt_auto_gen_indicator.txt  pyproject.toml  qt_async.py  readme.docx  readme.py  recorder.py  requirements.txt  server.py  setup.py  symbol_table.py  ta_lib-0.5.1-cp313-cp313-win_amd64.whl  table_indicator.py  test_.py  test_graph.py  test_process_circle.py  (+7 more)
.github/: FUNDING.yml
.github/workflows/: github_workflows_update-contributors.yml
.pyarmor/: config
TA_Lib-0.4.32.dist-info/: RECORD  direct_url.json
app/common/: config.py  icon.py  style_sheet.py
app/components/: link_card.py  sample_card.py
app/config/: config.json
app/view/: basic_input_interface.py  date_time_interface.py  dialog_interface.py  gallery_interface.py  home_interface.py  icon_interface.py  layout_interface.py  main_window.py  material_interface.py  menu_interface.py  navigation_view_interface.py  scroll_interface.py  (+4 more)
atklip/: __init__.py
config/: config.json
examples/: CustomGraphItem.py  text.py
pyqtgraph-examples/: ROIExamples.py  ROItypes.py  ViewLimits.py  crosshair.py  text.py  verlet_chain_demo.py
youtube_strategies/: 01_Robert_Carver_BreakOut(1).ipynb
(+2212 files in other folders)
